traces/sympy__sympy-14396/repair_log.txt
2026-02-11 08:13:19,786 - INFO - Starting test generation for sympy__sympy-14396 using SWT-bench containers
2026-02-11 08:13:19,786 - INFO - Detected language: python
2026-02-11 08:13:19,786 - INFO - Using Docker mode (runtime setup) for sympy__sympy-14396
2026-02-11 08:13:19,799 - INFO - Pulling from registry: ghcr.io/mistralai/exec.env.x86_64.deec2122407a414e380748:latest
2026-02-11 08:13:28,468 - INFO - Successfully pulled: ghcr.io/mistralai/exec.env.x86_64.deec2122407a414e380748:latest
2026-02-11 08:13:28,468 - INFO - Starting container (attempt 1/5): swt-jie.zhang-sympy__sympy-14396-9fb047
2026-02-11 08:13:28,833 - INFO - Container started: 317a15bae318ec80f3b1127f4922d978f3b1125379371ab0419e9d11c4bd08ee
2026-02-11 08:13:28,833 - INFO - Running repo setup at runtime...
2026-02-11 08:13:28,865 - ERROR - Error during repo setup: 404 Client Error for http://docker-service:2375/v1.53/exec/3185630fb2a248d42fdca2ecd4e08114b429561f5a4fc5e3bd5c2d12d012e5cf/json: Not Found ("No such exec instance: 3185630fb2a248d42fdca2ecd4e08114b429561f5a4fc5e3bd5c2d12d012e5cf")
2026-02-11 08:13:28,865 - WARNING - Container start attempt 1 failed: Failed to run repo setup
2026-02-11 08:13:30,868 - INFO - Starting container (attempt 2/5): swt-jie.zhang-sympy__sympy-14396-1c38f8
2026-02-11 08:13:30,872 - WARNING - Image was garbage collected, re-pulling: ghcr.io/mistralai/exec.env.x86_64.deec2122407a414e380748:latest
2026-02-11 11:44:40,651 - INFO - Starting test generation for sympy__sympy-14396 using SWT-bench containers
2026-02-11 11:44:40,651 - INFO - Detected language: python
2026-02-11 11:44:40,652 - INFO - Using Docker mode (runtime setup) for sympy__sympy-14396
2026-02-11 11:44:40,693 - INFO - Found local registry image: ghcr.io/mistralai/exec.env.x86_64.deec2122407a414e380748:latest
2026-02-11 11:44:40,693 - INFO - Pulling from registry: ghcr.io/mistralai/exec.env.x86_64.deec2122407a414e380748:latest
2026-02-11 11:44:41,419 - INFO - Successfully pulled: ghcr.io/mistralai/exec.env.x86_64.deec2122407a414e380748:latest
2026-02-11 11:44:41,419 - INFO - Starting container (attempt 1/5): swt-jie.zhang-sympy__sympy-14396-903dd7
2026-02-11 11:44:41,945 - INFO - Container started: d47eb271a7a12ef6870e222acb49df026efa851dd8063a3693a5af43eb58d744
2026-02-11 11:44:41,945 - INFO - Running repo setup at runtime...
2026-02-11 11:44:54,811 - INFO - Repo setup completed successfully
2026-02-11 11:44:54,812 - INFO - === GENERATION PHASE ===
2026-02-11 11:44:54,812 - INFO - === GENERATION PHASE ===
2026-02-11 11:50:31,608 - INFO - Generation completed
2026-02-11 11:50:32,234 - INFO - Found test file at: /testbed/test_reproduce.py
2026-02-11 11:50:32,234 - INFO - === VALIDATION + REPAIR LOOP ===
2026-02-11 11:50:32,500 - INFO - Using run command: cd /testbed && pip install -e . -q 2>/dev/null; python test_reproduce.py...
2026-02-11 11:50:32,500 - INFO - Validation attempt 1/4
2026-02-11 11:50:39,216 - ERROR - F->P verification FAILED: Test FAILS on head commit (should PASS)
2026-02-11 11:50:39,216 - ERROR -   Head commit exit code: 1
2026-02-11 11:50:39,216 - ERROR -   Head commit output (first 500 chars): /testbed/sympy/core/basic.py:3: DeprecationWarning: Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated since Python 3.3, and in 3.10 it will stop working
  from collections import Mapping, defaultdict
/testbed/sympy/core/expr.py:12: DeprecationWarning: Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated since Python 3.3, and in 3.10 it will stop working
  from collections import defaultdict, Iterable
/testbed/
2026-02-11 11:50:39,216 - INFO - Validation failed: FAILS_ON_HEAD
2026-02-11 11:50:39,216 - INFO - Requesting repair attempt 1
2026-02-11 11:50:43,353 - INFO - Repair step 1: executing command
2026-02-11 11:50:56,251 - INFO - Repair step 2: executing command
2026-02-11 11:51:01,368 - INFO - Repair step 3: executing command
2026-02-11 11:51:14,376 - INFO - Repair step 4: executing command
2026-02-11 11:51:27,963 - INFO - Repair step 5: executing command
2026-02-11 11:51:41,619 - INFO - Repair step 6: executing command
2026-02-11 11:51:44,187 - INFO - Repair step 7: executing command
2026-02-11 11:51:57,880 - INFO - Repair step 8: executing command
2026-02-11 11:52:02,189 - INFO - Repair step 9: executing command
2026-02-11 11:52:14,916 - INFO - Repair step 10: executing command
2026-02-11 11:52:27,157 - INFO - Repair step 11: executing command
2026-02-11 11:52:40,498 - INFO - Repair step 12: executing command
2026-02-11 11:52:54,199 - INFO - Repair step 13: executing command
2026-02-11 11:53:08,049 - INFO - Repair step 14: LLM called verify_test, extracting code
2026-02-11 11:53:08,050 - WARNING - Could not extract repaired code after 14 steps
2026-02-11 11:53:08,050 - WARNING - Failed to get repaired test
2026-02-11 11:53:08,050 - INFO - Validation attempt 2/4
2026-02-11 11:53:16,749 - ERROR - F->P verification FAILED: Test FAILS on head commit (should PASS)
2026-02-11 11:53:16,750 - ERROR -   Head commit exit code: 1
2026-02-11 11:53:16,750 - ERROR -   Head commit output (first 500 chars): /testbed/sympy/core/basic.py:3: DeprecationWarning: Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated since Python 3.3, and in 3.10 it will stop working
  from collections import Mapping, defaultdict
/testbed/sympy/core/expr.py:12: DeprecationWarning: Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated since Python 3.3, and in 3.10 it will stop working
  from collections import defaultdict, Iterable
/testbed/
2026-02-11 11:53:16,750 - INFO - Validation failed: FAILS_ON_HEAD
2026-02-11 11:53:16,750 - INFO - Requesting repair attempt 2
2026-02-11 11:53:31,203 - INFO - Repair step 1: executing command
2026-02-11 11:53:45,467 - INFO - Repair step 2: executing command
2026-02-11 11:54:00,394 - INFO - Repair step 3: executing command
2026-02-11 11:54:05,040 - INFO - Repair step 4: executing command
2026-02-11 11:54:19,077 - INFO - Repair step 5: executing command
2026-02-11 11:54:23,096 - INFO - Repair step 6: executing command
2026-02-11 11:54:37,660 - INFO - Repair step 7: executing command
2026-02-11 11:54:52,432 - INFO - Repair step 8: reading file /testbed/test_reproduction.py
2026-02-11 11:55:07,076 - INFO - Repair step 9: LLM called finish
2026-02-11 11:55:07,077 - WARNING - Could not extract repaired code after 9 steps
2026-02-11 11:55:07,077 - WARNING - Failed to get repaired test
2026-02-11 11:55:07,077 - INFO - Validation attempt 3/4
2026-02-11 11:55:15,700 - ERROR - F->P verification FAILED: Test FAILS on head commit (should PASS)
2026-02-11 11:55:15,700 - ERROR -   Head commit exit code: 1
2026-02-11 11:55:15,700 - ERROR -   Head commit output (first 500 chars): /testbed/sympy/core/basic.py:3: DeprecationWarning: Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated since Python 3.3, and in 3.10 it will stop working
  from collections import Mapping, defaultdict
/testbed/sympy/core/expr.py:12: DeprecationWarning: Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated since Python 3.3, and in 3.10 it will stop working
  from collections import defaultdict, Iterable
/testbed/
2026-02-11 11:55:15,700 - INFO - Validation failed: FAILS_ON_HEAD
2026-02-11 11:55:15,700 - INFO - Requesting repair attempt 3
2026-02-11 11:55:33,591 - INFO - Repair step 1: executing command
2026-02-11 11:55:48,387 - INFO - Repair step 2: executing command
2026-02-11 11:56:06,272 - INFO - Repair step 3: executing command
2026-02-11 11:56:21,136 - INFO - Repair step 4: executing command
2026-02-11 11:56:23,486 - INFO - Repair step 5: executing command
2026-02-11 11:56:28,060 - INFO - Repair step 6: executing command
2026-02-11 11:56:43,422 - INFO - Repair step 7: executing command
2026-02-11 11:56:50,557 - INFO - Repair step 8: executing command
2026-02-11 11:57:18,930 - INFO - Repair step 9: executing command
2026-02-11 11:57:33,993 - INFO - Repair step 10: executing command
2026-02-11 11:57:57,440 - INFO - Repair step 11: got write_file with 1949 chars
2026-02-11 11:57:57,441 - INFO - Extracted repaired test (1949 chars) after 11 steps
2026-02-11 11:57:57,441 - INFO - Got repaired test, will re-validate
2026-02-11 11:57:57,441 - INFO - Validation attempt 4/4
2026-02-11 11:58:05,186 - ERROR - F->P verification FAILED: Test FAILS on head commit (should PASS)
2026-02-11 11:58:05,187 - ERROR -   Head commit exit code: 1
2026-02-11 11:58:05,187 - ERROR -   Head commit output (first 500 chars):   File "/testbed/test_reproduce.py", line 3
    The issue description contains INCORRECT commit hashes:
        ^
SyntaxError: invalid syntax

2026-02-11 11:58:05,187 - INFO - Validation failed: FAILS_ON_HEAD
2026-02-11 11:58:05,196 - INFO - Attempting to stop container swt-jie.zhang-sympy__sympy-14396-903dd7...
2026-02-11 11:58:22,020 - INFO - Attempting to remove container swt-jie.zhang-sympy__sympy-14396-903dd7...
2026-02-11 11:58:22,191 - INFO - Container swt-jie.zhang-sympy__sympy-14396-903dd7 removed.
